<resources>
    <string name="app_name">Vitesco Android</string>

    <!--Welcome strings-->
    <string name="login">Login</string>
    <string name="login_mayus">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_mayus">SIGN UP</string>
    <string name="search_device_connect_dongle">Search devices and connect with dongle</string>
    <string name="error_default">Error</string>

    <!--Login strings-->
    <string name="obligation">Mandatory *</string>
    <string name="nicknamest">Nickname *</string>
    <string name="phone">Phone Number *</string>
    <string name="passwordst">Password *</string>
    <string name="error"><i>(Error)</i></string>
    <string name="forgot"><u>Forgot your password?</u></string>
    <string name="pseudonym">Phone Number</string>
    <string name="phone_number">Pseudonym</string>
    <string name="chamin">Minimum 10 characters</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="invalid_userorpass">Invalid username or password</string>
    <string name="user_blocked">User blocked</string>
    <string name="user_profile_required">User profile required</string>

    <string name="my_routes">Tracklog History</string>
    <string name="my_profile">My profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_documents">Documents</string>
    <string name="my_orders">My Orders</string>
    <string name="notification_history">Notification History</string>
    <string name="call_to_call_center">Call to Call Center</string>
    <string name="logout">Log out</string>

    <string name="correctly_working">Correctly working</string>
    <string name="warning_detected">Warning Detected</string>
    <string name="odometer">Distance Accumulation</string>
    <string name="total">Total</string>
    <string name="engine">Motor</string>
    <string name="On">On</string>
    <string name="fuel">Low Oil pressure</string>
    <string name="low">Low</string>
    <string name="high_beams">High beam</string>
    <string name="low_beams">Low beam</string>
    <string name="position_lights">Position lights</string>
    <string name="doors">Doors</string>
    <string name="closed">Closed</string>
    <string name="hazards">Hazards</string>
    <string name="no">No</string>
    <string name="vehicle_condition">Vehicle Condition</string>
    <string name="ok">OK</string>
    <string name="dongle">Dongle</string>
    <string name="last_connection">Last connection</string>
    <string name="check">Check</string>

    <string name="edit">EDIT</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="title_my_drive">My Drive</string>
    <string name="message">Message</string>
    <string name="update">Update: %s</string>
    <string name="hours_of_operation">Hours of operation</string>
    <string name="engine_status">Power Status</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="oil_pressure">Oil Pressure</string>
    <string name="air_filter">Air Filter</string>
    <string name="engine_oil">Engine Oil</string>
    <string name="oil_filter">Oil Filter</string>
    <string name="fuel_filter">Fuel Filter</string>
    <string name="notify_change">Notify Change</string>
    <string name="detected_x">Detected at %s</string>
    <string name="replaced_x">Replaced at %s</string>
    <string name="coordinates">Coordinates</string>
    <string name="show_upload_location">Show Last Location</string>
    <string name="dtc_freeze_frame">DTC Freeze Frame</string>
    <string name="freeze_data">Freeze Data</string>
    <string name="freeze_frame_data">Freeze Frame Data</string>
    <string name="engine_torque_mode">Engine Torque Mode</string>
    <string name="boost">Boost</string>
    <string name="engine_speed">Engine Speed</string>
    <string name="engine_percent_load">Engine Percent Load</string>
    <string name="engine_coolant_temperature">Engine Coolant Temperature</string>
    <string name="vehicle_speed">Vehicle Speed</string>
    <string name="speed">Speed</string>
    <string name="manufacturer_specific_raw_data">Manufacturer Specific (Raw Data)</string>
    <string name="freeze_frame_raw_data">Freeze Frame (Raw Data)</string>
    <string name="freeze_frame_type">DTC Status</string>
    <string name="dtc_code_raw_data">DTC Code (Raw Data)</string>
    <string name="dtc_code">DTC Code</string>
    <string name="connectivity">Connectivity Settings</string>
    <string name="CLEAR">CLEAR</string>
    <string name="question_reset_air_filter">Are you sure you want to reset Air Filter?</string>
    <string name="question_reset_engine_oil">Are you sure you want to reset Engine Oil?</string>
    <string name="question_reset_oil_filter">Are you sure you want to reset Oil Filter?</string>
    <string name="question_reset_fuel_filter">Are you sure you want to reset Fuel Filter?</string>
    <string name="accelerator_pedal_position">Accelerator Pedal Position</string>
    <string name="engine_load">Engine Load</string>
    <string name="fuel_activator">Fuel Activator</string>
    <string name="fuel_rate">Fuel Rate</string>
    <string name="throttle_valve_1">Throttle Valve 1</string>
    <string name="battery_power">Battery / Power</string>
    <string name="battery_potential">Battery Potential</string>
    <string name="from_manufacturer">From Manufacturer</string>
    <string name="from_user">From User</string>
    <string name="reset">Reset</string>
    <string name="clear_files">Clear Files</string>
    <string name="reconnect">Reconnect</string>
    <string name="no_pending_tracklogs">No pending Tracklogs</string>
    <string name="pending_tracklogs">%d pending Tracklogs</string>
    <string name="no_pending_statuslogs">No pending Statuslogs</string>
    <string name="pending_statuslogs">%d pending Statuslogs</string>
    <string name="clear_ask">Do you want to clear the files?</string>
    <string name="yes">Yes</string>
    <string name="reconnect_ask">Do you want to reconnect to the device?</string>
    <string name="batteryVoltage">Battery Voltage</string>
    <string name="distanceAccumulation">Distance Accumulation</string>
    <string name="RPM">RPM</string>
    <string name="distanceBasedFuelCons">Fuel Economy</string>
    <string name="fuelConsumption">Fuel Consumption</string>
    <string name="fuelBlend">Fuel Blend</string>
    <string name="throttlePositionSensor">Throttle Position Sensor</string>
    <string name="hoursFunctionality">Hours Functionality</string>
    <string name="drivingScore">Driving Score</string>
    <string name="speedScore">Speed Score</string>
    <string name="accelerationScore">Time Score</string>
    <string name="throttleScore">Throttle Score</string>
    <string name="breakEventsScore">Consume Score</string>
    <string name="rpmScore">RPM Score</string>
    <string name="ecoDriving">ECO Driving</string>
    <string name="local_ranking_best_drive">Ranking</string>
    <string name="rankings">Rankings</string>
    <string name="eco_driving">Eco driving Score</string>
    <string name="safety_driving">Driving scores</string>
    <string name="average_title">(avg %s)</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="go_to_my_position"><u>Go to my position</u></string>
    <string name="mil">MIL</string>
    <string name="warning_lamp">Warning Lamp</string>
    <string name="bank_lamp">Bank Lamp</string>
    <string name="ecu_aps_level">Aps Level</string>
    <string name="row_fuel_low_level">Fuel Low Level</string>
    <string name="position">Position: %s</string>
    <string name="score">(score: %s)</string>
    <string name="select_action">Select action</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_from_camera">Capture photo from camera</string>
    <string name="no_pending_diagnosislogs">No pending Diagnosislogs</string>
    <string name="pending_diagnosislogs">%d pending Diagnosislogs</string>
    <string name="firmware_version">Firmware Version:</string>

    <string name="driving">Driving</string>
    <string name="acceleration">Time</string>
    <string name="throttle">Throttle</string>
    <string name="breakEvents">Consume</string>
    <string name="rpm">RPM</string>

</resources>